// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly as Casey 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <Button
        onPress={[Function]}
      >
        <SvgMock />
      </Button>
    }
    shadow={true}
    testID="header"
    title="People"
    titleStyle={
      Object {
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      }
    }
  />
  <PeopleList
    items={
      Array [
        Object {
          "id": 1,
          "type": "person",
        },
        Object {
          "id": 2,
          "type": "person",
        },
        Object {
          "id": 3,
          "type": "person",
        },
      ]
    }
    onRefresh={[Function]}
    personId="4224323"
    refreshing={false}
    sections={false}
    testID="peopleList"
  />
</View>
`;

exports[`renders empty correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <Button
        onPress={[Function]}
      >
        <SvgMock />
      </Button>
    }
    shadow={true}
    testID="header"
    title="People"
    titleStyle={
      Object {
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      }
    }
  />
  <PeopleList
    items={
      Array [
        Object {
          "id": "me person",
        },
      ]
    }
    onRefresh={[Function]}
    personId="4224323"
    refreshing={false}
    sections={false}
    testID="peopleList"
  />
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <Button
      buttonTextStyle={
        Array [
          undefined,
        ]
      }
      onPress={[Function]}
      pill={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "height": 48,
            "width": 650,
          },
          undefined,
        ]
      }
      testID="bottomButton"
      text="TAKE A STEP WITH SOMEONE"
      type="secondary"
    />
  </RCTSafeAreaView>
</View>
`;
